<resources>
    <string name="app_name">PlayStation</string>
    <string name="button1_name">PlayStation 1</string>
    <string name="button2_name">PlayStation 2</string>
    <string name="button3_name">PlayStation 3</string>
    <string name="button4_name">PlayStation 4</string>
    <string name="button5_name">PlayStation 5</string>
    <string name="release_button">End Time</string>
    <string name="start_time">Start Time :</string>
    <string name="end_time">End Time :</string>
    <string name="total_hours">Time :</string>
    <string name="total_price">Price :</string>
    <string name="time_text"> </string>
    <string name="home_item">Home</string>
    <string name="revenues_item">Revenues</string>
    <string name="total_revenue">Total Revenues :</string>
    <string name="total_reservations">Total Reservations :</string>
    <string name="total_reserved_hours">Total Hours :</string>
    <string name="clear_button">Close Shift</string>
    <string name="cancel_button">Cancel Reservation</string>

</resources>