<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_screen_layout"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="0dp"
    android:background="@color/white"
    tools:context=".HomeActivity">
    <!--layouts of first && second buttons-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/playStation1_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreen"
            android:drawableTint="@color/lightGreen"
            android:text="@string/button1_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="@string/button1_name" />

        <View
            android:id="@+id/first_layout_view"
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/playStation2_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreen"
            android:drawableTint="@color/lightGreen"
            android:text="@string/button2_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="@string/button2_name" />
    </LinearLayout>
    <!--buttons of third && fourth buttons-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/playStation3_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreen"
            android:drawableTint="@color/lightGreen"
            android:text="@string/button3_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/second_layout_view"
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/playStation4_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreen"
            android:drawableTint="@color/lightGreen"
            android:text="@string/button4_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--buttons of fifth button-->
    <Button
        android:id="@+id/playStation5_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:backgroundTint="@color/lightGreen"
        android:drawableTint="@color/lightGreen"
        android:text="@string/button5_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>